--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -217,6 +217,7 @@ body {
 
 .chat .chat-message {
   padding: 20px;
+  position: relative;
 }
 
 .online,
@@ -400,4 +401,37 @@ input[type="file"] {
   color: #fff;
   margin-bottom: 0;
   margin-right: 10px;
+}
+
+.preview {
+  position: absolute;
+  top: 90%;
+}
+
+.cancel {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  width: 17px;
+  height: 17px;
+  top: -10%;
+  right: -10%;
+  border-radius: 50%;
+  background-color: #fff;
+}
+
+.preview img {
+  width: 75px;
+  height: 75px;
+  box-shadow: 0px 0px 20px 0px #0000008a;
+  border-radius: 10px;
+}
+
+.message-image img {
+  max-width: 400px;
+  max-height: 300px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 2px 0px #0000008a;
 }
